<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad_banner">ca-app-pub-9324502556605881/2169221124</string>
    <string name="ad_interstitial">ca-app-pub-9324502556605881/1338521038</string>
    <string name="ad_interstitial_open_app">ca-app-pub-9324502556605881/9999609682</string>
    <string name="app_id">ca-app-pub-9324502556605881~3346571422</string>
    <string name="app_name">QR Scanner</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_common_retry0">ca-app-pub-9324502556605881/9557250694</string>
    <string name="banner_common_retry1">ca-app-pub-9324502556605881/8244169027</string>
    <string name="banner_common_retry2">ca-app-pub-9324502556605881/3231994421</string>
    <string name="banner_exit_dialog_retry0">ca-app-pub-9324502556605881/6767435824</string>
    <string name="banner_exit_dialog_retry1">ca-app-pub-9324502556605881/3806709498</string>
    <string name="banner_exit_dialog_retry2">ca-app-pub-9324502556605881/7314230738</string>
    <string name="banner_med_empty_retry0">ca-app-pub-9324502556605881/6788096051</string>
    <string name="banner_med_empty_retry1">ca-app-pub-9324502556605881/2629359190</string>
    <string name="banner_med_empty_retry2">ca-app-pub-9324502556605881/3750869172</string>
    <string name="banner_test_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_give_5_start_prompt3">I am a programmer working very hard to give you the best free application. Your 5-star review is worth more than all money. Please write a nice review in Google Play to encourage me</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="dialog_rate_dislike3">Dislike it</string>
    <string name="dialog_rate_fivestar3">5 stars!</string>
    <string name="dialog_rate_nothanks3">No, thanks</string>
    <string name="dialog_rate_title3">Rate me 5 stars</string>
    <string name="error_input_address">input address</string>
    <string name="error_input_description_event">input description event</string>
    <string name="error_input_first_name">input first name</string>
    <string name="error_input_id">input name wifi</string>
    <string name="error_input_last_name">input last name</string>
    <string name="error_input_latitude">input latitude</string>
    <string name="error_input_longitude">input longitude</string>
    <string name="error_input_message">input massage</string>
    <string name="error_input_password">input password wifi</string>
    <string name="error_input_phone">phone number from 6 to 13 characters</string>
    <string name="error_input_query">input query</string>
    <string name="error_input_subject">input subject</string>
    <string name="error_input_text">input text</string>
    <string name="error_input_url">input url</string>
    <string name="error_location_event">input location event</string>
    <string name="error_title_event">input title event</string>
    <string name="error_validate_email">validate email</string>
    <string name="error_web_event">The site is not formatted correctly</string>
    <string name="google_maps_key">AIzaSyATGiWF-X9cOljXjErJRVgRjjI4S4M6O-0</string>
    <string name="inter_gift_retry0">ca-app-pub-9324502556605881/1104045609</string>
    <string name="inter_gift_retry1">ca-app-pub-9324502556605881/7286310570</string>
    <string name="inter_gift_retry2">ca-app-pub-9324502556605881/3347065569</string>
    <string name="inter_open_app_retry0">ca-app-pub-9324502556605881/6627054773</string>
    <string name="inter_open_app_retry1">ca-app-pub-9324502556605881/3921780631</string>
    <string name="inter_open_app_retry2">ca-app-pub-9324502556605881/4872379155</string>
    <string name="interstitial_test_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="lb_first_name">First Name</string>
    <string name="lb_last_name">Last Name</string>
    <string name="lbl_add_contact">Add Contact</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_alert_call_phone_permission_denied">Access call phone denied! The app required to access call phone to do call.</string>
    <string name="lbl_alert_call_send_sms_failed">SMS app not found.</string>
    <string name="lbl_alert_camera_permission_denied">Access camera denied! The app required to access camera to scan QRCode.</string>
    <string name="lbl_alert_not_connect">Please check your network connection.</string>
    <string name="lbl_alert_parse_qr_code_failed">QRCode is wrong.</string>
    <string name="lbl_alert_read_contact_permission_denied">Access contact denied! The app required to access contact to get contact.</string>
    <string name="lbl_alert_storage_permission_denied">Access storage denied! The app required to access storage to write some data.</string>
    <string name="lbl_alert_write_contact_permission_denied">Access contact denied! The app required to access contact to write contact.</string>
    <string name="lbl_altitude">Altitude</string>
    <string name="lbl_app_permission">App permissions</string>
    <string name="lbl_begin_time">Begin Time</string>
    <string name="lbl_best_before_date">Best before date</string>
    <string name="lbl_body">Body</string>
    <string name="lbl_call">Telephone</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_clear_qr_code">Do you want clear all QRCode?</string>
    <string name="lbl_contact">Contact</string>
    <string name="lbl_create">Create</string>
    <string name="lbl_create_qrcode">Create QR Code</string>
    <string name="lbl_created_qr_history">Created QR History</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_delete_empty_item">Please choose at least one item</string>
    <string name="lbl_delete_qr_code">Delete QRCode</string>
    <string name="lbl_delete_selected_code">Delete selected QRCode?</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_discard">Discard</string>
    <string name="lbl_discard_save_image">Do you want to save the image?</string>
    <string name="lbl_disconnect_network">Network not found</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_end_time">End Time</string>
    <string name="lbl_enter_your_number">Enter your number</string>
    <string name="lbl_event">Event</string>
    <string name="lbl_exists">QR code existed</string>
    <string name="lbl_expiration_date">Expiration date</string>
    <string name="lbl_favorites">Favorites</string>
    <string name="lbl_feedback">Feedback</string>
    <string name="lbl_full_name">Full name</string>
    <string name="lbl_get_full_version">Get Pro Version</string>
    <string name="lbl_get_pro_version_title">Buy a professional version to remove ads and motivate us to work hard to improve the product better.</string>
    <string name="lbl_gps_settings">GPS Settings</string>
    <string name="lbl_hidden">Hidden</string>
    <string name="lbl_history">History</string>
    <string name="lbl_import">Import</string>
    <string name="lbl_import_contact_list">Import Contact List</string>
    <string name="lbl_later">Later</string>
    <string name="lbl_latitude">Latitude</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_longitude">Longitude</string>
    <string name="lbl_more_apps">More apps</string>
    <string name="lbl_rate_me_star">Rate me 5 stars</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_share_app">Share app</string>
    <string name="lbl_version">Version</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
</resources>